Introduced new artifacts map keyed by URL to speed up some queries