@@ -33,6 +33,8 @@ POSSIBILITY OF SUCH DAMAGE.
 package org.lockss.rs.io.index;
 
 import org.apache.commons.collections4.IteratorUtils;
+import org.apache.commons.collections4.MultiValuedMap;
+import org.apache.commons.collections4.multimap.ArrayListValuedHashMap;
 import org.apache.commons.lang3.StringUtils;
 import org.lockss.log.L4JLogger;
 import org.lockss.util.rest.repo.model.Artifact;
@@ -60,7 +62,10 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
     public static String ARTIFACT_INDEX_TYPE = "In-memory";
 
     // Internal map from artifact ID to Artifact
-    protected Map<String, Artifact> index = new ConcurrentHashMap<>();
+    protected Map<String, Artifact> indexedByUuid = new ConcurrentHashMap<>();
+
+    private MultiValuedMap<String, Artifact> indexedByUrlMap =
+        new ArrayListValuedHashMap<>(1);
 
     /**
      * Map from artifact stem to semaphore. Used for artifact version locking.
@@ -161,7 +166,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
         throw new IllegalArgumentException("Null or empty artifact UUID");
       }
 
-      return index.get(artifactUuid);
+      return indexedByUuid.get(artifactUuid);
     }
 
     /**
@@ -194,7 +199,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
         throw new IllegalArgumentException("Null or empty artifact UUID");
       }
 
-      Artifact artifact = index.get(artifactUuid);
+      Artifact artifact = indexedByUuid.get(artifactUuid);
 
       if (artifact != null) {
         artifact.setCommitted(true);
@@ -268,7 +273,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
         throw new IllegalArgumentException("Null or empty artifact UUID");
       }
 
-      return index.containsKey(artifactUuid);
+      return indexedByUuid.containsKey(artifactUuid);
     }
     
     @Override
@@ -282,7 +287,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       }
 
       // Retrieve the Artifact from the internal artifacts map
-      Artifact artifact = index.get(artifactUuid);
+      Artifact artifact = indexedByUuid.get(artifactUuid);
 
       // Return null if the artifact could not be found
       if (artifact == null) {
@@ -304,7 +309,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
      */
     @Override
     public Iterable<String> getNamespaces() {
-      List<String> res = index.values().stream()
+      List<String> res = indexedByUuid.values().stream()
         .map(x -> x.getNamespace())
         .distinct()
         .sorted()
@@ -325,7 +330,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       VolatileArtifactPredicateBuilder query = new VolatileArtifactPredicateBuilder();
       query.filterByNamespace(namespace);
 
-      List<String> res = index.values().stream()
+      List<String> res = indexedByUuid.values().stream()
         .filter(query.build())
         .map(x -> x.getAuid()).distinct()
         .sorted()
@@ -355,7 +360,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
         q.filterByAuid(auid);
 
         // Filter, then group the Artifacts by URI, and pick the Artifacts with max version from each group
-        Map<String, Optional<Artifact>> result = index.values().stream()
+        Map<String, Optional<Artifact>> result = indexedByUuid.values().stream()
           .filter(q.build())
           .collect(Collectors.groupingBy(Artifact::getUri,
                                          Collectors.maxBy(Comparator.comparingInt(Artifact::getVersion))));
@@ -411,13 +416,13 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
     @Override
     public Iterable<Artifact> getArtifactsWithPrefix(String namespace, String auid, String prefix) throws IOException {
         VolatileArtifactPredicateBuilder q = new VolatileArtifactPredicateBuilder();
+        q.filterByURIPrefix(prefix);
         q.filterByCommitStatus(true);
         q.filterByNamespace(namespace);
         q.filterByAuid(auid);
-        q.filterByURIPrefix(prefix);
 
         // Apply the filter, group the Artifacts by URL, then pick the Artifact with highest version from each group
-        Map<String, Optional<Artifact>> result = index.values().stream()
+        Map<String, Optional<Artifact>> result = indexedByUuid.values().stream()
           .filter(q.build())
           .collect(Collectors.groupingBy(Artifact::getUri,
                                          Collectors.maxBy(Comparator.comparingInt(Artifact::getVersion))));
@@ -445,10 +450,10 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
     @Override
     public Iterable<Artifact> getArtifactsWithPrefixAllVersions(String namespace, String auid, String prefix) {
         VolatileArtifactPredicateBuilder query = new VolatileArtifactPredicateBuilder();
+        query.filterByURIPrefix(prefix);
         query.filterByCommitStatus(true);
         query.filterByNamespace(namespace);
         query.filterByAuid(auid);
-        query.filterByURIPrefix(prefix);
 
 	// Apply filter then sort the resulting Artifacts by URL and descending version
 	return IteratorUtils.asIterable(getIterableArtifacts().stream().filter(query.build())
@@ -481,15 +486,14 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       }
 
       VolatileArtifactPredicateBuilder query = new VolatileArtifactPredicateBuilder();
-      query.filterByCommitStatus(true);
-      query.filterByNamespace(namespace);
-
       if (urlPrefix != null) {
         query.filterByURIPrefix(urlPrefix);
       }
+      query.filterByCommitStatus(true);
+      query.filterByNamespace(namespace);
 
       // Apply predicates filter to Artifact stream
-      Stream<Artifact> allVersions = index.values().stream().filter(query.build());
+      Stream<Artifact> allVersions = indexedByUuid.values().stream().filter(query.build());
 
       if (versions == ArtifactVersions.LATEST) {
         Stream<Artifact> latestVersions = allVersions
@@ -527,11 +531,20 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
         query.filterByCommitStatus(true);
         query.filterByNamespace(namespace);
         query.filterByAuid(auid);
-        query.filterByURIMatch(url);
 
         // Apply filter then sort the resulting Artifacts by URL and descending version
-        return IteratorUtils.asIterable(getIterableArtifacts().stream().filter(query.build())
+        return IteratorUtils.asIterable(getArtifactsWithUrl(url).stream().filter(query.build())
             .sorted(ArtifactComparators.BY_DECREASING_VERSION).iterator());
+    }
+
+    private Collection<Artifact> getArtifactsWithUrl(String url) {
+      Collection<Artifact> result = indexedByUrlMap.get(url);
+
+      if (result == null) {
+        result = Collections.emptyList();
+      }
+
+      return result;
     }
 
     /**
@@ -559,20 +572,19 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       VolatileArtifactPredicateBuilder query = new VolatileArtifactPredicateBuilder();
         query.filterByCommitStatus(true);
         query.filterByNamespace(namespace);
-        query.filterByURIMatch(url);
 
         // Apply predicates filter to Artifact stream
-        Stream<Artifact> allVersions = index.values().stream().filter(query.build());
+        Stream<Artifact> allVersions = getArtifactsWithUrl(url).stream().filter(query.build());
 
         if (versions == ArtifactVersions.LATEST) {
           Stream<Artifact> latestVersions = allVersions
-            // Group the Artifacts by URL then pick the Artifact with highest version from each group
-            .collect(Collectors.groupingBy(artifact -> artifact.getIdentifier().getArtifactStem(),
-                                           Collectors.maxBy(Comparator.comparingInt(Artifact::getVersion))))
-            .values()
-            .stream()
-            .filter(Optional::isPresent)
-            .map(Optional::get);
+              // Group the Artifacts by URL then pick the Artifact with highest version from each group
+              .collect(Collectors.groupingBy(artifact -> artifact.getIdentifier().getArtifactStem(),
+                  Collectors.maxBy(Comparator.comparingInt(Artifact::getVersion))))
+              .values()
+              .stream()
+              .filter(Optional::isPresent)
+              .map(Optional::get);
 
           return IteratorUtils.asIterable(latestVersions.sorted(ArtifactComparators.BY_URI_BY_AUID_BY_DECREASING_VERSION).iterator());
         }
@@ -605,10 +617,12 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
 
         q.filterByNamespace(namespace);
         q.filterByAuid(auid);
-        q.filterByURIMatch(url);
 
         // Apply the filter then get the artifact with max version
-        Optional<Artifact> result = index.values().stream().filter(q.build()).max(Comparator.comparingInt(Artifact::getVersion));
+        Optional<Artifact> result = getArtifactsWithUrl(url)
+            .stream()
+            .filter(q.build())
+            .max(Comparator.comparingInt(Artifact::getVersion));
 
         // Return the artifact, or null if one was not found
         return result.orElse(null);
@@ -641,10 +655,12 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
 
       q.filterByNamespace(namespace);
       q.filterByAuid(auid);
-      q.filterByURIMatch(url);
       q.filterByVersion(version);
 
-      List<Artifact> artifacts = index.values().stream().filter(q.build()).collect(Collectors.toList());
+      List<Artifact> artifacts = getArtifactsWithUrl(url)
+          .stream()
+          .filter(q.build())
+          .toList();
 
       switch (artifacts.size()) {
       case 0:
@@ -680,7 +696,7 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       q.filterByNamespace(namespace);
       q.filterByAuid(auid);
 
-      boolean isAuEmpty = !index.values()
+      boolean isAuEmpty = !indexedByUuid.values()
           .stream()
           .anyMatch(q.build());
 
@@ -695,14 +711,14 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
       auSize.setTotalWarcSize(totalWarcSize);
 
       auSize.setTotalAllVersions(
-          index.values()
+          indexedByUuid.values()
               .stream()
               .filter(q.build())
               .mapToLong(Artifact::getContentLength)
               .sum());
 
       Map<String, Optional<Artifact>> latestArtifactVersions =
-          index.values()
+          indexedByUuid.values()
               .stream()
               .filter(q.build())
               .collect(Collectors.groupingBy(Artifact::getUri, Collectors.maxBy(Comparator.comparingInt(Artifact::getVersion))));
@@ -726,7 +742,8 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
      */
     protected void addToIndex(String id, Artifact artifact) {
       // Add Artifact to the index.
-      index.put(id, artifact);
+      indexedByUuid.put(id, artifact);
+      indexedByUrlMap.put(artifact.getUri(), artifact);
     }
 
     /**
@@ -739,16 +756,23 @@ public class VolatileArtifactIndex extends AbstractArtifactIndex {
      */
     protected Artifact removeFromIndex(String id) {
       // Remove Artifact from the index.
-      return index.remove(id);
+      Artifact removed = indexedByUuid.remove(id);
+
+      if (removed != null) {
+        indexedByUrlMap.removeMapping(removed.getUri(), removed);
+        return removed;
+      }
+
+      return null;
     }
 
     private Collection<Artifact> getIterableArtifacts() {
-      return index.values();
+      return indexedByUuid.values();
     }
 
     @Override
     public String toString() {
-      return "[VolatileArtifactIndex index=" + index + "]";
+      return "[VolatileArtifactIndex index.size() = " + indexedByUuid.size() + "]";
     }
 
     /**
